[gd_scene load_steps=3 format=3 uid="uid://dhcyxrtfvoppd"]

[ext_resource type="PackedScene" uid="uid://ckwyrstxu6iyv" path="res://UI/LevelCompletedUI/star_anim_ui.tscn" id="1_h3xld"]
[ext_resource type="Script" path="res://UI/LevelCompletedUI/starholder3_3_star.gd" id="1_nm8kv"]

[node name="Starholder3" type="GridContainer"]
anchors_preset = -1
anchor_left = 0.64
anchor_top = 0.247
anchor_right = 0.64
anchor_bottom = 0.247
offset_left = -81.28
offset_top = -32.056
offset_right = 80.72
offset_bottom = 31.944
theme_override_constants/h_separation = -15
columns = 3
script = ExtResource("1_nm8kv")

[node name="StarAnim1" parent="." instance=ExtResource("1_h3xld")]
visible = false
layout_mode = 2

[node name="StarAnim2" parent="." instance=ExtResource("1_h3xld")]
visible = false
layout_mode = 2

[node name="StarAnim3" parent="." instance=ExtResource("1_h3xld")]
visible = false
layout_mode = 2
